2006-12-06  Timothy Brownawell  <tbrownaw@gmail.com>

	Version 1.34 of boost changes some things. In particular fs::path
	is now a typedef (breaks the declaration we had in vocab.hh), and
	some of our exceptions are different.

	Remove the vocab.hh declaration of fs::path, and #if/#else some things in
	file_io.cc to handle the changing names.

2006-12-05  Thomas Keller  <me@thomaskeller.biz>

    * database.cc: removed implicit wildcards for author cert selections

2006-12-04  Matthew Nicholson  <matt@matt-land.com>

	* ChangeLog: Fixed name on previous entry.

2006-12-04  Matthew Nicholson  <matt@matt-land.com>

	* contrib/monotone.bash_completion: Updated and reformated some what.
	Still needs work.  The bulk of this could probably be generated
	automatically.

2006-12-01  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Make sure some
	global variables, like found_workspace, are properly initialised
	after the temporary bookkeeping directory is created.

2006-12-01  Richard Levitte  <richard@levitte.org>

	* tests/import/__driver__.lua: Test using --message-file.

2006-12-01  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Add the usual
	restriction options, as well as --author and --date.
	* tests/import/__driver__.lua: Test the restrictions a bit.

2006-11-30  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)), options_list.hh:
	Implement --dry-run, locally for the import command for now.
	* po/sv.po: Adjust for the added string.
	* tests/import/__driver__.lua: Test it.
	* monotone.texi (Tree): Document it.

2006-11-30  Richard Levitte  <richard@levitte.org>

	* tests/import/__driver__.lua: Add a test to show that it really
	doesn't import a workspace.

2006-11-30  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Add import command.
	It's quite simplistic, it basically creates a _MTN bookkeeping