@@ -563,7 +563,7 @@ table.insert(tests, "netsync,--exclude,defaults")
 table.insert(tests, "ls_tags_with_ambiguous_tags")
 table.insert(tests, "db_kill_tag_locally")
 table.insert(tests, "diff_-rREV1_-rREV2_UNCHANGED-FILE")
-table.insert(tests, "b_and_t_selector_globbing")
+table.insert(tests, "b_t_and_a_selector_globbing")
 table.insert(tests, "diff_--external")
 table.insert(tests, "db_migrate_on_bad_schema")
 table.insert(tests, "list_branches")
