@@ -1,3 +1,8 @@
+2006-12-06  Thomas Keller <me@thomaskeller.biz>
+
+	Existing test for previous change in author cert selection
+	tweaked (previously b_and_t_selector_globbing)
+
 2006-12-06  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	Version 1.34 of boost changes some things. In particular fs::path
@@ -9,7 +14,7 @@
 
 2006-12-05  Thomas Keller  <me@thomaskeller.biz>
 
-    * database.cc: removed implicit wildcards for author cert selections
+	* database.cc: removed implicit wildcards for author cert selections
 
 2006-12-04  Matthew Nicholson  <matt@matt-land.com>
 
